[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revolut-merchant-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the Revolut Merchant API — customers, orders, subscriptions, plans."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sherman Studio Ltd" }]
keywords = ["mcp", "revolut", "merchant", "payments", "subscriptions", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
revolut-merchant-mcp = "revolut_merchant_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Sherman-Studio/revolut-merchant-mcp"
Issues = "https://github.com/Sherman-Studio/revolut-merchant-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/revolut_merchant_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
